# takker-docs

./: .gitignore  LICENSE  mkdocs.yml  package.json  pyproject.toml  readme.md
docs/: README.md  index.md
docs/.vuepress/: config.js  config.ts
docs/.vuepress/public/: manifest.webmanifest
docs/.vuepress/styles/: index.scss
docs/about/: README.md
docs/guide/: README.md  install.md  prepare.md  run.md
