[tool.poetry]
name = "takker_docs"
version = "0.1.0"
description = "Docs for Takker Bot using mkdocs-material"
authors = ["风屿 <i@windis.cn>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
mkdocs-material = "^7.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
